--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "NODE_ENV=production tsx build.ts",
     "dev": "NODE_ENV=development tsx build.ts --watch",
-    "start:watch": "node dist/index.js --watch",
+    "start:watch": "node -r reflect-metadata dist/index.js --watch",
     "clean": "rimraf dist",
-    "start": "node dist/index.js"
+    "start": "node -r reflect-metadata dist/index.js"
   },
   "author": "Tond28",
   "license": "MIT",
@@ -21,12 +21,16 @@
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
     "octokit": "^4.0.2",
-    "tsx": "^4.19.3"
+    "prompts": "^2.4.2",
+    "reflect-metadata": "^0.2.2",
+    "tsx": "^4.19.3",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.10",
+    "@types/prompts": "^2.4.9",
     "eslint": "^9.21.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.26.0"
